--- a/Organizate/app/src/main/res/layout/activity_splash.xml
+++ b/Organizate/app/src/main/res/layout/activity_splash.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
-    tools:context="organizate.compumovil.udea.edu.co.SplashActivity">
+    tools:context=".activities.SplashActivity">
 
     <TextView
         android:id="@+id/fullscreen_content"
