--- a/Organizate/app/src/main/res/layout/activity_main.xml
+++ b/Organizate/app/src/main/res/layout/activity_main.xml
@@ -9,22 +9,36 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".activities.MainActivity">
 
+    <FrameLayout
+        android:id="@+id/main_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
+
         <ListView
-            android:id="@+id/activity_list"
+            android:id="@+id/event_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </ScrollView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_event"
-        android:src="@android:drawable/ic_input_add"
+        android:src="@drawable/ic_add"
+        android:tint="@color/white"
+        android:onClick="addEvent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true" />
+
 </RelativeLayout>
