--- a/Organizate/app/src/main/res/layout/activity_splash.xml
+++ b/Organizate/app/src/main/res/layout/activity_splash.xml
@@ -14,6 +14,7 @@
         android:text="@string/app_name"
         android:textColor="#33b5e5"
         android:textSize="50sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textAllCaps="true" />
 
 </FrameLayout>
