--- a/Organizate/app/src/main/res/values/dimens.xml
+++ b/Organizate/app/src/main/res/values/dimens.xml
@@ -3,4 +3,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="item_margin">12dp</dimen>
+    <dimen name="item_title">18sp</dimen>
+    <dimen name="item_description">14sp</dimen>
+    <dimen name="item_min_height">70dp</dimen>
 </resources>
