Added some colors

--- a/Organizate/app/src/main/res/values/colors.xml
+++ b/Organizate/app/src/main/res/values/colors.xml
@@ -4,6 +4,11 @@
     <color name="colorPrimaryDark">#1976D2</color>
     <color name="colorAccent">#FF5722</color>
 
-    <color name="white">#FFFFFFFF</color>
     <color name="black_overlay">#66000000</color>
+
+    <color name="cyan">#00BCD4</color>
+    <color name="lime">#CDDC39</color>
+    <color name="pink">#E91E63</color>
+    <color name="white">#FFFFFFFF</color>
+    <color name="purple">#E040FB</color>
 </resources>
