--- a/Organizate/app/src/main/res/layout/activity_editor.xml
+++ b/Organizate/app/src/main/res/layout/activity_editor.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:discreteseekbar="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -15,7 +16,7 @@
         android:paddingTop="@dimen/activity_vertical_margin">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/event_name_layout"
                 android:layout_width="match_parent"
