--- a/Organizate/app/src/main/res/layout/activity_login.xml
+++ b/Organizate/app/src/main/res/layout/activity_login.xml
@@ -1,20 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="organizate.compumovil.udea.edu.co.activities.LoginActivity"
-    android:weightSum="1">
+    tools:context="organizate.compumovil.udea.edu.co.activities.LoginActivity">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="134dp"
+        android:layout_height="match_parent"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -22,73 +16,56 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/event_name_layout"
+                android:id="@+id/email_layout"
+                android:layout_below="@+id/event_name_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <TextView
+                <EditText
+                    android:id="@+id/email"
+                    android:hint="@string/email"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/correo"
-                    android:id="@+id/textView2"
-                    android:layout_gravity="center_horizontal"
-                    android:inputType="textEmailAddress" />
+                    android:layout_height="wrap_content" />
 
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/event_place_layout"
+                android:id="@+id/password_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/event_name_layout">
+                android:layout_below="@+id/email_layout">
 
-                <TextView
+                <EditText
+                    android:id="@+id/password"
+                    android:hint="@string/password"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/contraseña"
-                    android:id="@+id/textView"
-                    android:layout_gravity="center_horizontal"
-                    android:inputType="text"
-                    android:password="true" />
+                    android:layout_height="wrap_content" />
 
             </android.support.design.widget.TextInputLayout>
 
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_below="@+id/password_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
+                <Button
+                    android:id="@+id/signin"
+                    android:text="@string/signin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <Button
+                    android:id="@+id/signup"
+                    android:text="@string/signup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
         </RelativeLayout>
+    </ScrollView>
 
-    <LinearLayout
-        android:id="@+id/event_repeat_container"
-        android:layout_below="@+id/event_alarm_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:layout_weight="0.39">
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal">
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/ingresar"
-                android:id="@+id/button"
-                android:layout_gravity="left" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/registrarse"
-                android:id="@+id/button2" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-</ScrollView>
-
-</LinearLayout>
+</RelativeLayout>
