--- a/Organizate/app/src/main/res/layout/activity_main.xml
+++ b/Organizate/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
 
-    <ListView
-        android:id="@+id/event_list"
+    <FrameLayout
+        android:id="@+id/main_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:drawSelectorOnTop="false" />
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/add_event"
-        android:src="@drawable/ic_add"
-        android:tint="@color/white"
-        android:onClick="addEvent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true" />
+    <ListView
+        android:id="@+id/left_frame"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:background="@android:color/background_light" />
 
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
