--- a/Organizate/app/src/main/res/layout/activity_splash.xml
+++ b/Organizate/app/src/main/res/layout/activity_splash.xml
@@ -5,16 +5,28 @@
     android:background="#0099cc"
     tools:context=".activities.SplashActivity">
 
-    <TextView
-        android:id="@+id/fullscreen_content"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:keepScreenOn="true"
-        android:text="@string/app_name"
-        android:textColor="#33b5e5"
-        android:textSize="50sp"
-        android:textStyle="bold"
-        android:textAllCaps="true" />
+        android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/fullscreen_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:keepScreenOn="true"
+            android:text="@string/app_name"
+            android:textColor="#33b5e5"
+            android:textSize="50sp"
+            android:textStyle="bold"
+            android:textAllCaps="true"
+            android:layout_centerInParent="true" />
+
+        <ProgressBar
+            style="@android:style/Widget.DeviceDefault.ProgressBar.Large"
+            android:layout_below="@+id/fullscreen_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
 </FrameLayout>
