--- a/Organizate/app/src/main/res/values/styles.xml
+++ b/Organizate/app/src/main/res/values/styles.xml
@@ -6,6 +6,9 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="homeAsUpIndicator">@drawable/ic_reorder_white_24dp</item>
+        <item name="android:homeAsUpIndicator">@drawable/ic_reorder_white_24dp</item>
     </style>
 
     <style name="AppThemeNoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
