--- a/Organizate/app/src/main/res/layout/fragment_about.xml
+++ b/Organizate/app/src/main/res/layout/fragment_about.xml
@@ -5,9 +5,24 @@
     tools:context="organizate.compumovil.udea.edu.co.fragments.AboutFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/about"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/about"/>
+
+
+          <TextView
+            android:id="@+id/desarrollado"
+            android:layout_width="match_parent"
+            android:layout_below="@id/about"
+            android:layout_height="wrap_content"
+            android:text="@string/desarrollado"/>
+</RelativeLayout>
 
 </FrameLayout>
