--- a/Organizate/app/src/main/res/layout/activity_login.xml
+++ b/Organizate/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,8 @@
                     android:id="@+id/password"
                     android:hint="@string/password"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -54,12 +55,14 @@
                 <Button
                     android:id="@+id/signin"
                     android:text="@string/signin"
+                    android:onClick="signin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <Button
                     android:id="@+id/signup"
                     android:text="@string/signup"
+                    android:onClick="signup"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
