--- a/Organizate/app/src/main/res/layout/fragment_contacts.xml
+++ b/Organizate/app/src/main/res/layout/fragment_contacts.xml
@@ -5,10 +5,26 @@
     android:layout_height="match_parent"
     tools:context="organizate.compumovil.udea.edu.co.fragments.ContactsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/contact_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:drawSelectorOnTop="false" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/add_contact"
+            android:src="@drawable/ic_add"
+            android:tint="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/fab_margin"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true" />
+
+    </RelativeLayout>
 
 </FrameLayout>
