--- a/Organizate/app/src/main/res/layout/activity_category.xml
+++ b/Organizate/app/src/main/res/layout/activity_category.xml
@@ -7,19 +7,17 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="organizate.compumovil.udea.edu.co.activities.Categoria">
+    tools:context=".activities.CategoryActivity">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:layout_height="match_parent">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/category_name_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -31,21 +29,20 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <RelativeLayout
-                android:id="@+id/event_repeat_container"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/category_color_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="5dp">
+                android:layout_below="@id/category_name_layout">
 
-                <TextView
-                    android:id="@+id/color_name"
+                <EditText
+                    android:id="@+id/category_color"
                     android:hint="@string/color_hint"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true" />
 
-
-            </RelativeLayout>
+            </android.support.design.widget.TextInputLayout>
         </RelativeLayout>
     </ScrollView>
 
@@ -53,7 +50,7 @@
         android:id="@+id/add_event"
         android:src="@drawable/ic_done"
         android:tint="@color/white"
-        android:onClick="addEvent"
+        android:onClick="addCategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
